samples/_failures_safe/1761467411_7b81d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3a17ee4.c: In function ‘main’:
./samples/SAFE/__tmp_c3a17ee4.c:148:23: error: expected ‘]’ at end of input
  148 |     char start_node[32
      |                       ^
      |                       ]
./samples/SAFE/__tmp_c3a17ee4.c:148:5: error: expected declaration or statement at end of input
  148 |     char start_node[32
      |     ^~~~
